--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -64,8 +64,8 @@
         "title": "Доступ к микрофону",
         "description": "Необходим для прослушивания вашего голоса для транскрипции."
       },
-      "screenRecording": {
-        "title": "Доступ к записи экрана",
+      "systemAudio": {
+        "title": "Доступ к системному аудио",
         "description": "Необходим для захвата звука динамиков на встречах."
       },
       "grant": "Предоставить разрешение",
@@ -187,25 +187,6 @@
           "none": "Нет",
           "bottom": "Снизу",
           "top": "Сверху"
-        }
-      },
-      "pasteMethod": {
-        "title": "Метод вставки",
-        "description": "Выбрать способ вставки текста. Прямой: имитирует набор текста через системный ввод. Нет: пропуск вставки, обновление только истории/буфера обмена.",
-        "options": {
-          "clipboard": "Буфер обмена ({{modifier}}+V)",
-          "clipboardCtrlShiftV": "Буфер обмена (Ctrl+Shift+V)",
-          "clipboardShiftInsert": "Буфер обмена (Shift+Insert)",
-          "direct": "Прямой",
-          "none": "Нет"
-        }
-      },
-      "clipboardHandling": {
-        "title": "Обработка буфера обмена",
-        "description": "Функция «Не изменять буфер обмена» сохраняет текущее содержимое буфера обмена после транскрипции. Копировать в буфер обмена оставляет результат транскрипции в буфере обмена после вставки.",
-        "options": {
-          "dontModify": "Не изменять буфер обмена",
-          "copyToClipboard": "Копировать в буфер обмена"
         }
       },
       "translateToEnglish": {
@@ -352,14 +333,6 @@
       "postProcessingToggle": {
         "label": "Постобработка",
         "description": "Включить уточнение текста с помощью искусственного интеллекта после транскрипции"
-      },
-      "muteWhileRecording": {
-        "label": "Отключить звук во время записи",
-        "description": "Отключение звука системы во время записи"
-      },
-      "appendTrailingSpace": {
-        "label": "Добавить конечный пробел",
-        "description": "Добавить пробел после вставленной транскрипции"
       },
       "paths": {
         "appData": "Данные приложения:",
