--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -64,8 +64,8 @@
         "title": "Доступ до мікрофона",
         "description": "Потрібен для прослуховування вашого голосу для транскрипції."
       },
-      "screenRecording": {
-        "title": "Доступ до запису екрана",
+      "systemAudio": {
+        "title": "Доступ до системного аудіо",
         "description": "Потрібен для захоплення звуку динаміків на зустрічах."
       },
       "grant": "Надати дозвіл",
@@ -187,25 +187,6 @@
           "none": "Немає",
           "bottom": "Внизу",
           "top": "Вгорі"
-        }
-      },
-      "pasteMethod": {
-        "title": "Метод вставки",
-        "description": "Оберіть спосіб вставки тексту. Прямий: емулює набір тексту. Немає: пропускає вставку, оновлює лише історію/буфер обміну.",
-        "options": {
-          "clipboard": "Буфер обміну ({{modifier}}+V)",
-          "clipboardCtrlShiftV": "Буфер обміну (Ctrl+Shift+V)",
-          "clipboardShiftInsert": "Буфер обміну (Shift+Insert)",
-          "direct": "Прямий",
-          "none": "Немає"
-        }
-      },
-      "clipboardHandling": {
-        "title": "Робота з буфером обміну",
-        "description": "Не змінювати буфер обміну зберігає поточний вміст буфера після транскрипції. Копіювати в буфер обміну залишає результат транскрипції в буфері після вставки.",
-        "options": {
-          "dontModify": "Не змінювати буфер обміну",
-          "copyToClipboard": "Копіювати в буфер обміну"
         }
       },
       "translateToEnglish": {
@@ -352,14 +333,6 @@
       "postProcessingToggle": {
         "label": "Постобробка",
         "description": "Увімкнути покращення тексту за допомогою AI після транскрипції"
-      },
-      "muteWhileRecording": {
-        "label": "Вимкнути звук під час запису",
-        "description": "Вимикати системний звук під час запису"
-      },
-      "appendTrailingSpace": {
-        "label": "Додавати пробіл в кінці",
-        "description": "Додавати пробіл після вставленої транскрипції"
       },
       "paths": {
         "appData": "Дані програми:",
