clean up unused code

--- a/src/i18n/locales/cs/translation.json
+++ b/src/i18n/locales/cs/translation.json
@@ -2,9 +2,7 @@
   "tray": {
     "settings": "Nastavení...",
     "checkUpdates": "Zkontrolovat aktualizace...",
-    "copyLastTranscript": "Zkopírovat poslední přepis",
-    "quit": "Ukončit",
-    "cancel": "Zrušit"
+    "quit": "Ukončit"
   },
   "sidebar": {
     "general": "Obecné",
