--- a/src/i18n/locales/de/translation.json
+++ b/src/i18n/locales/de/translation.json
@@ -2,9 +2,7 @@
   "tray": {
     "settings": "Einstellungen...",
     "checkUpdates": "Nach Updates suchen...",
-    "copyLastTranscript": "Letzte Transkription kopieren",
-    "quit": "Beenden",
-    "cancel": "Abbrechen"
+    "quit": "Beenden"
   },
   "sidebar": {
     "general": "Allgemein",
