--- a/src/i18n/locales/it/translation.json
+++ b/src/i18n/locales/it/translation.json
@@ -2,9 +2,7 @@
   "tray": {
     "settings": "Impostazioni...",
     "checkUpdates": "Verifica aggiornamenti...",
-    "copyLastTranscript": "Copia l'ultima trascrizione",
-    "quit": "Esci",
-    "cancel": "Annulla"
+    "quit": "Esci"
   },
   "sidebar": {
     "general": "Generale",
