--- a/src/i18n/locales/pt/translation.json
+++ b/src/i18n/locales/pt/translation.json
@@ -2,9 +2,7 @@
   "tray": {
     "settings": "Configurações...",
     "checkUpdates": "Verificar Atualizações...",
-    "copyLastTranscript": "Copiar última transcrição",
-    "quit": "Sair",
-    "cancel": "Cancelar"
+    "quit": "Sair"
   },
   "sidebar": {
     "general": "Geral",
