--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -2,9 +2,7 @@
   "tray": {
     "settings": "Settings...",
     "checkUpdates": "Check for Updates...",
-    "copyLastTranscript": "Copy Last Transcript",
-    "quit": "Quit",
-    "cancel": "Cancel"
+    "quit": "Quit"
   },
   "sidebar": {
     "general": "General",
