--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -2,9 +2,7 @@
   "tray": {
     "settings": "Configuración...",
     "checkUpdates": "Buscar actualizaciones...",
-    "copyLastTranscript": "Copiar la última transcripción",
-    "quit": "Salir",
-    "cancel": "Cancelar"
+    "quit": "Salir"
   },
   "sidebar": {
     "general": "General",
