--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -3,9 +3,7 @@
   "tray": {
     "settings": "Paramètres...",
     "checkUpdates": "Rechercher des mises à jour...",
-    "copyLastTranscript": "Copier la dernière transcription",
-    "quit": "Quitter",
-    "cancel": "Annuler"
+    "quit": "Quitter"
   },
   "sidebar": {
     "general": "Général",
