--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -2,9 +2,7 @@
   "tray": {
     "settings": "Настройки...",
     "checkUpdates": "Проверить обновления...",
-    "copyLastTranscript": "Скопировать последнюю транскрипцию",
-    "quit": "Выход",
-    "cancel": "Отмена"
+    "quit": "Выход"
   },
   "sidebar": {
     "general": "Общие",
