--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -2,9 +2,7 @@
   "tray": {
     "settings": "Налаштування...",
     "checkUpdates": "Перевірити оновлення...",
-    "copyLastTranscript": "Скопіювати останню транскрипцію",
-    "quit": "Вийти",
-    "cancel": "Скасувати"
+    "quit": "Вийти"
   },
   "sidebar": {
     "general": "Загальні",
