--- a/src/i18n/locales/vi/translation.json
+++ b/src/i18n/locales/vi/translation.json
@@ -3,9 +3,7 @@
   "tray": {
     "settings": "Cài đặt...",
     "checkUpdates": "Kiểm tra cập nhật...",
-    "copyLastTranscript": "Sao chép bản chép lời mới nhất",
-    "quit": "Thoát",
-    "cancel": "Hủy"
+    "quit": "Thoát"
   },
   "sidebar": {
     "general": "Chung",
