--- a/src/i18n/locales/zh/translation.json
+++ b/src/i18n/locales/zh/translation.json
@@ -2,9 +2,7 @@
   "tray": {
     "settings": "设置...",
     "checkUpdates": "检查更新...",
-    "copyLastTranscript": "复制最新转录",
-    "quit": "退出",
-    "cancel": "取消"
+    "quit": "退出"
   },
   "sidebar": {
     "general": "通用",
