clean up github docs

--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -1,5 +1,5 @@
 {
-  "_comment": "French translation for Talky. Contribute at: https://github.com/cjpais/Talky",
+  "_comment": "French translation for Talky. Contribute at: https://github.com/itskhalil/talky",
   "tray": {
     "settings": "Paramètres...",
     "checkUpdates": "Rechercher des mises à jour...",
