--- a/src/i18n/locales/vi/translation.json
+++ b/src/i18n/locales/vi/translation.json
@@ -1,5 +1,5 @@
 {
-  "_comment": "Vietnamese translation for Talky. Contribute at: https://github.com/cjpais/Talky",
+  "_comment": "Vietnamese translation for Talky. Contribute at: https://github.com/itskhalil/talky",
   "tray": {
     "settings": "Cài đặt...",
     "checkUpdates": "Kiểm tra cập nhật...",
