menu bar and per-session enhancement

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
   "tray": {
-    "settings": "Settings...",
+    "newNote": "New Note",
+    "stopRecording": "Stop Recording",
     "checkUpdates": "Check for Updates...",
     "quit": "Quit"
   },
