--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -1,6 +1,7 @@
 {
   "tray": {
-    "settings": "Configuración...",
+    "newNote": "Nueva Nota",
+    "stopRecording": "Detener Grabación",
     "checkUpdates": "Buscar actualizaciones...",
     "quit": "Salir"
   },
