fix: focus model list on parakeet v3

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -55,7 +55,7 @@
       },
       "parakeet-tdt-0.6b-v2": {
         "name": "Parakeet V2",
-        "description": "English only. The best model for English speakers."
+        "description": "English only."
       },
       "parakeet-tdt-0.6b-v3": {
         "name": "Parakeet V3",
