fix: app name in translation

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -581,6 +581,7 @@
     "checkForUpdates": "Check for updates"
   },
   "common": {
+    "appName": "talky",
     "loading": "Loading...",
     "save": "Save",
     "cancel": "Cancel",
